[gd_scene load_steps=9 format=3 uid="uid://b4t1haasidaev"]

[ext_resource type="Script" path="res://scripts/loose_menu.gd" id="1_of8u2"]
[ext_resource type="Texture2D" uid="uid://c0m833wja6f5b" path="res://assets/pictures/loose.png" id="1_p520d"]
[ext_resource type="FontFile" uid="uid://ca0h6iu4buqvp" path="res://assets/fonts/3997-font.otf" id="2_ukie2"]
[ext_resource type="Script" path="res://scripts/menu_button.gd" id="4_s6uye"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_grlhu"]
bg_color = Color(0.984314, 0.898039, 0.109804, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.290196, 0.0705882, 1)
expand_margin_left = 5.0
expand_margin_right = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_041vj"]
bg_color = Color(0.517647, 0.462745, 0.00784314, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.290196, 0.0705882, 1)
expand_margin_left = 5.0
expand_margin_right = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4h73j"]
bg_color = Color(0.317647, 0.282353, 0.00392157, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.290196, 0.0705882, 1)
expand_margin_left = 5.0
expand_margin_right = 5.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iklo8"]

[node name="LooseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_of8u2")

[node name="LooseFace" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 750.0
offset_bottom = 1000.0
scale = Vector2(0.855, 0.855)
texture = ExtResource("1_p520d")

[node name="Text" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -147.0
offset_top = 69.0
offset_right = 147.0
offset_bottom = 138.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Ты проебал
"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -141.0
offset_right = 20.0
offset_bottom = -101.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 40
alignment = 1

[node name="ExitButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.176471, 0.184314, 0.266667, 1)
theme_override_colors/font_pressed_color = Color(0.529412, 0.556863, 0.690196, 1)
theme_override_colors/font_focus_color = Color(1, 1, 0.992157, 1)
theme_override_fonts/font = ExtResource("2_ukie2")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_grlhu")
theme_override_styles/hover = SubResource("StyleBoxFlat_041vj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4h73j")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_iklo8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_iklo8")
text = "Выход"
script = ExtResource("4_s6uye")

[node name="RestartButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.176471, 0.184314, 0.266667, 1)
theme_override_colors/font_pressed_color = Color(0.529412, 0.556863, 0.690196, 1)
theme_override_colors/font_focus_color = Color(1, 1, 0.992157, 1)
theme_override_fonts/font = ExtResource("2_ukie2")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_grlhu")
theme_override_styles/hover = SubResource("StyleBoxFlat_041vj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4h73j")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_iklo8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_iklo8")
text = "Начать заново"
script = ExtResource("4_s6uye")

[connection signal="pressed" from="HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="HBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
